# workforce-mlops

./: .dockerignore  .dvcignore  .env.example  .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
app/: streamlit_app.py
deploy/argocd/: application.yaml
deploy/k8s/base/: deployment.yaml  service.yaml
deploy/k8s/overlays/prod/: kustomization.yaml  namespace.yaml
docker/: Dockerfile  entrypoint.sh
docs/: AP_SOUTH1_SETUP.md  ARGOCD_GITOPS_SETUP.md  AWS_DEPLOY_PLAYBOOK.md  AWS_GITHUB_SETUP.md  CLOUD_AUTO_CONNECT.md  COMPLETE_AWS_MLOPS_DEPLOYMENT.md  SETUP_GUIDE_MACOS.md  TROUBLESHOOTING.md
infra/: mlflow.service  user_data.sh
reports/: .gitignore
scripts/: auto_cloud_connect.sh  bootstrap.sh  bootstrap_github_repo.sh  bootstrap_macos.sh  build_push_and_deploy.sh  create_venv.ps1  create_venv.sh  ec2_deploy.sh  provision_aws.sh  provision_aws_gitops.sh  set_github_secrets.sh  setup_dvc_s3.sh  setup_mlflow_aws.sh  setup_mlflow_ec2.sh  start_mlflow_server.sh  verify_dvc_s3.sh
src/workforce_mlops/: __init__.py  config.py  mlflow_utils.py
src/workforce_mlops/api/: __init__.py  main.py  presets.py  schemas.py
src/workforce_mlops/api/services/: prediction.py  (+2 more)
src/workforce_mlops/data/: ingest.py  preprocess.py  validate.py
src/workforce_mlops/models/: compare_models.py  evaluate.py  model_factory.py  multitask_model.py  predict.py  promote_model.py  train.py
tests/: test_api_services.py  test_model_forward.py  test_model_promotion.py  test_preprocess_targets.py
(+9 files in other folders)
